tests/errors/test_16.xpp
// User functions can't utilise variatics

fn test(x: ...) void {}

fn main() void {

}